# AppBox

./: README.md
ArtHook/lib/src/main/java/de/larma/arthook/: ArtHook.java  ArtMethod.java  Native.java  OriginalMethod.java
ArtHook/lib/src/main/java/de/larma/arthook/instrs/: Arm32.java
ArtHook/lib/src/main/jni/: hook.c
ArtHook/test/src/main/: AndroidManifest.xml
ArtHook/test/src/main/java/de/larma/arthook/test/: Base.java  Hooks.java  MyActivity.java  MyApplication.java  SpecialBase.java
lightbox/: .gitignore
lightbox-stubmaker/: .gitignore  HelloWorld0.apk  MainActivity.smali  conf.ini  launcher.py  main.py  master.apk  pd.sh  utils.py
lightbox-stubmaker/keys/: my-release-key.keystore
lightbox/app/: build.gradle
lightbox/app/src/main/: AndroidManifest.xml
lightbox/app/src/main/aidl/com/example/bladerunner/services/: IActivityService.aidl
lightbox/app/src/main/cpp/: CMakeLists.txt  hello-jni.c  my_listen.c
lightbox/app/src/main/java/com/example/bladerunner/: Common.java  MainActivity.java  MyApp.java  MyReceiver.java  NativeCode.java  Utils.java
lightbox/app/src/main/java/com/example/bladerunner/hooks/: CertificateHooks.java  ClassHooks.java  CryptoHooks.java  CursorHooks.java  DexFileHooks.java  FSHooks.java  GenericHooks.java  Hooks.java  HttpHooks.java  HttpsHooks.java  IPCHooks.java  (+8 more)
lightbox/app/src/main/res/layout/: activity_2.xml  activity_hello_jni.xml  activity_main.xml  activity_nb.xml
lightbox/app/src/main/res/values/: strings.xml
lightbox/gradle/wrapper/: gradle-wrapper.properties
lightbox/lib-release/: lib-release.aar
(+5 files in other folders)
